# MedCheck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pr_body.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: intended-use.md  model-card.md  models.md  providers.md  quickstart.md  workflows.md
docs/research/: opensource-options.md
medcheck/core/: config.py
src/medcheck/: __init__.py  main.py
src/medcheck/core/: __init__.py  config.py  context.py  step.py  workflow.py
src/medcheck/i18n/: __init__.py  de.json  en.json  es.json  fr.json  loader.py
src/medcheck/llm/: __init__.py  base.py  claude.py  gemini.py  local.py  openai_provider.py  router.py
src/medcheck/pipeline/: __init__.py  ingest.py  ml_analysis.py  preprocess.py  report.py  vision_analysis.py
src/medcheck/prompts/: report_schema.json  system.txt
src/medcheck/prompts/anatomy/: ankle.txt  hip.txt  knee.txt  shoulder.txt  spine.txt  wrist.txt
src/medcheck/providers/: __init__.py  base.py  easyradiology.py  local.py  registry.py
src/medcheck/web/: app.py
src/medcheck/web/static/: app.js
src/medcheck/web/templates/: index.html
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_cli.py  test_dockerfile.py  test_i18n.py  test_web.py
tests/unit/test_core/: test_config.py  test_context.py  test_step.py  test_workflow.py
tests/unit/test_llm/: test_base.py  test_local.py  test_providers.py  test_router.py
tests/unit/test_pipeline/: test_ingest.py  test_ml_analysis.py  test_preprocess.py  test_report.py  test_vision_analysis.py
tests/unit/test_providers/: test_easyradiology.py  test_local.py  test_registry.py
workflows/: default.yml  quick.yml  vision_only.yml
